// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeforeApplyingForSale display Before Applying when type is Habitat listing detail 1`] = `
<li
  className="list-section custom-counter__item"
>
  <header
    className="list-section__header custom-counter__header"
  >
    <hgroup>
      <h4
        className="custom-counter__title"
      >
        Before applying
      </h4>
      <span
        className="custom-counter__subtitle"
      >
        Make sure you:
      </span>
    </hgroup>
  </header>
  <ol
    className="numbered-list my-5 bg-white p-4 pt-6 text-sm"
  >
    <li>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Go to a <a href='https://habitatgsf.org/amber-drive-info/' target='_blank'>Habitat for Humanity information session</a>",
          }
        }
      />
    </li>
    <li>
      Haven't owned residential property in the past 3 years
    </li>
    <li>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Meet the <a href='https://sfmohcd.org/sites/default/files/Documents/MOH/Inclusionary%20Manuals/Inclusionary%20Affordable%20Housing%20Program%20Manual%2010.15.2018.pdf' target='_blank'>income requirements</a>",
          }
        }
      />
    </li>
    <li>
      Have a 650 credit score or higher
    </li>
  </ol>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "Read <a href='https://habitatgsf.org/amber-drive-info/' target='_blank'>our full list of requirements</a> for more details.",
      }
    }
  />
</li>
`;

exports[`BeforeApplyingForSale display Before Applying when type is directory 1`] = `
<div
  className="mb-8"
>
  <h2
    className="mb-5 text-caps-underline"
  >
    Before applying
  </h2>
  <p>
    Make sure you:
  </p>
  <ol
    className="numbered-list my-5"
  >
    <li>
      Haven't owned residential property in the past 3 years
    </li>
    <li>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Meet our <a href='https://sfmohcd.org/homebuyer-program-eligibility' target='_blank'>income requirements</a>",
          }
        }
      />
    </li>
    <li>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Complete <a href='https://sfmohcd.org/homebuyer-application-requirements#education' target='_blank'>homebuyer education</a>",
          }
        }
      />
    </li>
    <li>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Get pre-approved for a mortgage loan by a <a href='https://sfmohcd.org/lender-list' target='_blank'>lender on our list</a>",
          }
        }
      />
    </li>
    <li>
      Have enough in savings for closing costs and downpayment
    </li>
  </ol>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "Read <a href='https://sfmohcd.org/homebuyer-program-eligibility' target='_blank'>our full list of requirements</a> for more details.",
      }
    }
  />
</div>
`;

exports[`BeforeApplyingForSale display Before Applying when type is listing detail 1`] = `
<li
  className="list-section custom-counter__item"
>
  <header
    className="list-section__header custom-counter__header"
  >
    <hgroup>
      <h4
        className="custom-counter__title"
      >
        Before applying
      </h4>
      <span
        className="custom-counter__subtitle"
      >
        Make sure you:
      </span>
    </hgroup>
  </header>
  <ol
    className="numbered-list my-5 bg-white p-4 pt-6 text-sm"
  >
    <li>
      Haven't owned residential property in the past 3 years
    </li>
    <li>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Meet our <a href='https://sfmohcd.org/homebuyer-program-eligibility' target='_blank'>income requirements</a>",
          }
        }
      />
    </li>
    <li>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Complete <a href='https://sfmohcd.org/homebuyer-application-requirements#education' target='_blank'>homebuyer education</a>",
          }
        }
      />
    </li>
    <li>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Get pre-approved for a mortgage loan by a <a href='https://sfmohcd.org/lender-list' target='_blank'>lender on our list</a>",
          }
        }
      />
    </li>
    <li>
      Have enough in savings for closing costs and downpayment
    </li>
  </ol>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "Read <a href='https://sfmohcd.org/homebuyer-program-eligibility' target='_blank'>our full list of requirements</a> for more details.",
      }
    }
  />
</li>
`;
